@@ -1,6 +1,7 @@
 2018-xx-xx - 2.2.9
 -------------------------------
 - Refactored "Services" screan and use WP_List_Table class for the list.
+- Refactored "Service Providers" screan and use WP_List_Table class for the list.
 
 2018-xx-xx - 2.2.8
 -------------------------------
